--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,9 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/ProyectoSimulacion.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.Downloads-itextpdf-5.3.2.jar=C:\\Users\\antho\\Downloads\\itextpdf-5.3.2.jar
+file.reference.poi-3.9-20121203.jar=C:\\Users\\antho\\Downloads\\poi-3.9-20121203.jar
+file.reference.syntheticaBlackEye.jar=C:\\Users\\antho\\Downloads\\syntheticaBlackEye.jar
+file.reference.syntheticaBlueIce.jar=C:\\Users\\antho\\Downloads\\syntheticaBlueIce.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.Downloads-itextpdf-5.3.2.jar}:\
+    ${file.reference.poi-3.9-20121203.jar}:\
+    ${file.reference.syntheticaBlackEye.jar}:\
+    ${file.reference.syntheticaBlueIce.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
